updates stolen from heaven